# harmonization-framework

./: .gitignore  README.md  pyproject.toml  requirements.txt
.github/workflows/: python-tests.yml  sidecar-packaging.yml
demo/: demo_dictionary1.csv  demo_dictionary2.csv  demo_dictionary_target.csv  demo_source1.csv  demo_source2.csv  integration.ipynb
demo/client/: README.md  harmonize_example_client.ts  package-lock.json  package.json  rpc_client.ts  rpc_types.ts  tsconfig.json
demo/harmonize_example/: README.md  input.csv  output.csv  rules.json  run_example.py
demo/primitives_ui/: input.csv  rules.json
docs/: electron_sidecar.md
scripts/: build_sidecar.sh  init_db.py  run_api.sh  run_flask.sh  sidecar_entry.py
src/harmonization_framework/: __init__.py  cli.py  element.py  harmonization_rule.py  harmonize.py  rule.py  rule_registry.py  rule_store.py
src/harmonization_framework.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
src/harmonization_framework/api/: README.md  app.py  extensions.py  harmonization_api_examples.md  models.py  rpc_errors.py  rpc_handlers.py  rpc_jobs.py  rpc_models.py  sidecar.py
src/harmonization_framework/primitives/: __init__.py  base.py  bin_primitive.py  cast.py  dates.py  donothing.py  enum2enum.py  extract_regex.py  factory.py  format_number.py  map_each.py  (+14 more)
tests/: test_cli.py  test_multi_source.py  test_null_handling.py  test_primitives_serialization.py  test_regex_primitives.py  test_replay_logger.py  test_rpc_paths.py  test_rule_serialization.py  test_shutdown_endpoint.py  test_sidecar_config.py  test_yaml_rules.py
(+15 files in other folders)
